fixed padding on small screen

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -11,12 +11,6 @@
     grid-template-columns: repeat(3, 1fr);
   }
 
-  .menu-nav {
-    height: 75vh;
-    transform: translate3d(-100%, 0, 0);
-    font-size: 24px;
-  }
-
   .container {
     width: 90%;
   }
@@ -111,9 +105,11 @@
     }
   }
 
-  .nav-item:nth-child(4) {
-    font-size: 1.25rem;
-    margin: auto 1rem;
+  .menu-nav {
+    padding: 1rem;
+  }
+
+  .nav-item:nth-child(4)  {
     text-align: center;
   }
 
